# cryptobot_rust_example

./: Cargo.toml
src/: coinstruct.rs  main.old.rs  main.rs  plotting.rs  utils.rs
