[package]
name = "cryptobot_example"
version = "0.1.0"
authors = ["Sean Cobham <cobhamsean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1"}
futures = "0.3"
plotters = "^0.3.0"